--- a/base/templates/base/room_old.html
+++ b/base/templates/base/room_old.html
@@ -32,6 +32,9 @@
                 <hr>
             </div>
             {% endfor %}
+
+
+        
         </div>
 
 
@@ -39,10 +42,11 @@
         <div class="comment-form">
             <form method="POST" action="">
                 {% csrf_token %}
-                <input type="text" name="body" placeholder="Write you message here..." />
+                <input type="text" name="body" placeholder="Write you message here...hjhjjj" />
             </form>
         </div>
-        {% endif %}
+     
+         {% endif %}
 
     </div>
 
