--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-        <li>{{ message }}</li>
+        <strong><h1 style="text-align: center; color: red;">{{ message }}</h1></strong>
         {% endfor %}
     </ul>
     {% endif %}
