--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -111,7 +111,7 @@
       <div class="room__message">
         <form action="" method="POST">
           {% csrf_token %}
-          <input type="text" name="body" placeholder="Write only Short and Clear Answer.." />
+          <input type="text" name="body" placeholder="Write short Answer here...." />
         </form>
       </div>
     </div>
